# vlb

./: .gitignore  .gitmodules  COPYING  README.md
dataset/dataset_info/: vggh.json
datasets/dataset_info/: W1BS.json  oxford5k.json  paris6k.json  vggh.json
examples/: descbench.m  detbench.m  example_descriptors.m  example_detectors.m
examples/descriptors/: example_descriptors.m
examples/detectors/: example_detectors.m
matlab/: vlb.m  vlb_compile.m  vlb_dataset_featw.m  vlb_dataset_vggaffine.m  vlb_desc.m  vlb_desc_benchmark.m  vlb_desceval.m  vlb_describe.m  vlb_det.m  vlb_detdesc.m  vlb_detect.m  vlb_deteval.m  vlb_ellipse_overlap_H.m  vlb_evaldesc.m  vlb_evaldet.m  vlb_evalfeatures.m  vlb_extract.m  vlb_imagelist.m  vlb_matchingscore.m  vlb_path.m  vlb_repeatability.m  vlb_root.m  vlb_setup.m  vlb_thr_repeatability.m  vlb_view.m
matlab/+bench/: descmatch.m  detmatch.m  detrep.m  detrepthr.m
matlab/+desc/: descfactory.m  kde.m  matlabdesc.m  meanstd.m  rootsift.m  sift.m
matlab/+det/: detfactory.m  vggaff.m  vggmser.m  vlcovdet.m
matlab/+dset/: dsetfactory.m  edgefoci.m  factory.m  featw.m  hannoverh.m  hsequences.m  vgg.m  vggh.m  webcam.m
matlab/+features/: factory.m
matlab/+geom/: ellipse_overlap_H.m
python/: requirements.txt
python/features/TILDE/c++/: CMakeLists.txt
python/features/TILDE/c++/Demo/: CMakeLists.txt  demo.cpp
python/features/TILDE/c++/Detector/: CMakeLists.txt  detect.cpp
python/features/TILDE/c++/Lib/: CMakeLists.txt  libTILDE.dylib
python/features/TILDE/c++/Lib/src/: libTILDE.cpp  libTILDE.hpp
xtest/: vlb_test.m
(+201 files in other folders)
